objects/CN_Sample_Request__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name_Formula__c</fullName>
        <formula>CN_Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sample_RequestS_FeedbackS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Approver1_CCE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1 Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Approver2_Channel_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2 Channel Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_CCE_Team_Email__c</fullName>
        <defaultValue>IF(
  $RecordType.DeveloperName = &apos;CN_Office_Repack&apos;, 
  $Setup.CN_Approve_Process_Settings__c.CN_MKT_Group_Email__c,
  null
)</defaultValue>
        <label>CCE Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_CS_Team_Email__c</fullName>
        <defaultValue>IF(
  $RecordType.DeveloperName = &apos;CN_Whole_Pack&apos;,
  $Setup.CN_Approve_Process_Settings__c.CN_CS_Group_Email__c,
  null
)</defaultValue>
        <label>CS Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Condition_Type__c</fullName>
        <label>Condition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5TMK2104 – TM sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Creator_Name__c</fullName>
        <formula>CreatedBy.LastName &amp; &apos; &apos; &amp; CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>IF( 
  AND( ISBLANK(CN_Account_Name__r.CN_Customer_Code__c), RecordType.DeveloperName = &apos;CN_Whole_Pack&apos;),
  CASE(  CN_Account_Name__r.Owner.CN_Sales_Office__c ,&apos;K010&apos;,&apos;YP000081&apos;,&apos;K020&apos;,&apos;YP000080&apos;,&apos;K030&apos;,&apos;YP000082&apos;,&apos;K040&apos;,&apos;YP000054&apos;,&apos;K050&apos;,&apos;YP000081&apos;,&apos;&apos;),
  CN_Account_Name__r.CN_Customer_Code__c 
)</formula>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_Address__c</fullName>
        <inlineHelpText>Delivery Address is mandatory if delivery method is express delivery.</inlineHelpText>
        <label>Delivery Address+Contact+Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_End_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sample_RequestS_FeedbackS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Is_Draft__c</fullName>
        <formula>ISPICKVAL( CN_Sample_Request_Status__c , &quot;New&quot;) || ISPICKVAL( CN_Sample_Request_Status__c , &quot;Rejected&quot;) || ISPICKVAL( CN_Sample_Request_Status__c , &quot;Recalled&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Item_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sample_RequestS_FeedbackS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Proposal/Demo/Sample</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_RequestS_FeedbackS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Order_Reason__c</fullName>
        <label>Order Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Penetration</fullName>
                </value>
                <value>
                    <fullName>Chef Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Order_Reason_for_Wholepack__c</fullName>
        <label>Order Reason for Wholepack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>811 Customer Sample</fullName>
                    <default>true</default>
                    <label>811 Customer Sample</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Order_Type_for_Wholepack__c</fullName>
        <label>Order Type for Wholepack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZFD1 Sample for Customer</fullName>
                </value>
                <value>
                    <fullName>ZFD3 - BPP sample</fullName>
                </value>
                <value>
                    <fullName>ZFD3 -BPP sample</fullName>
                    <isActive>false</isActive>
                    <label>ZFD3 -BPP sample</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>CASE(
TEXT(CN_Sample_Request_Status__c),
&quot;New&quot;, $Label.CN_PleaseConfirm_Value_BackToNew,
&quot;Ready for Approval&quot;, $Label.CN_PleaseConfirm_Value_ReadyForApproval,
&quot;Submitted for Approval&quot;, $Label.CN_PleaseConfirm_Value_AlreadySubmitted,
$Label.CN_PleaseConfirm_Value_AlreadySubmitted
)</formula>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Remark__c</fullName>
        <inlineHelpText>Please fill in the remark , if you have special sample request requirement.</inlineHelpText>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_SP_Records_Count_All_Formula__c</fullName>
        <formula>TEXT(CN_SP_Records_Count_All__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP Records Count All Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SP_Records_Count_All__c</fullName>
        <label>SP Records Count All</label>
        <summaryForeignKey>CN_Sample_Product__c.CN_Sample_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_SP_Records_Count_Delivery_Status_All__c</fullName>
        <label>SP Records Count Delivery Status All</label>
        <summaryFilterItems>
            <field>CN_Sample_Product__c.CN_Status_of_Delivery__c</field>
            <operation>contains</operation>
            <value>Done, Out of Stock</value>
        </summaryFilterItems>
        <summaryForeignKey>CN_Sample_Product__c.CN_Sample_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_SP_Records_Count_Delivery_Status_Done__c</fullName>
        <label>SP Records Count Delivery Status Done</label>
        <summaryFilterItems>
            <field>CN_Sample_Product__c.CN_Status_of_Delivery__c</field>
            <operation>equals</operation>
            <value>Done</value>
        </summaryFilterItems>
        <summaryForeignKey>CN_Sample_Product__c.CN_Sample_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <formula>CASE(
    CN_Account_Name__r.Owner.CN_Sales_Office__c,
    &apos;K010&apos;,&apos;K010-ShangHai&apos;,
    &apos;K020&apos;,&apos;K020-BeiJing&apos;,
    &apos;K030&apos;,&apos;K030-ShenZhen&apos;,
    &apos;K040&apos;,&apos;K040-GuangZhou&apos;,
    &apos;K050&apos;,&apos;K050-ChengDu&apos;,
    &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person__c</fullName>
        <formula>CN_Account_Name__r.CN_Sales_Person_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Team__c</fullName>
        <formula>CN_Account_Name__r.CN_Sales_Team_UI__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Delivery_Method__c</fullName>
        <label>Sample Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include in the delivery tomorrow</fullName>
                </value>
                <value>
                    <fullName>Deliver to Office</fullName>
                </value>
                <value>
                    <fullName>Self Pick-up</fullName>
                </value>
                <value>
                    <fullName>Sales to pick up</fullName>
                </value>
                <value>
                    <fullName>Express Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sample_Feedback_Overdue__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/Report/00O5h000003bZtCEAU/view?queryScope=userFolders&quot;,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Feedback Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Needed_Date__c</fullName>
        <label>Sample Needed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Request_Cost__c</fullName>
        <label>Sample Request Cost</label>
        <summarizedField>CN_Sample_Product__c.CN_Sample_Cost__c</summarizedField>
        <summaryForeignKey>CN_Sample_Product__c.CN_Sample_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Sample_Request_Status__c</fullName>
        <label>Sample Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Approval</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN_Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Warehouse_Location__c</fullName>
        <formula>TEXT(CN_Account_Name__r.CN_Delivery_Plant__c)</formula>
        <label>Warehouse Location</label>
        <type>Text</type>
    </fields>
    <label>Sample Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Sample_Needed_Date__c</columns>
        <columns>CN_Order_Reason__c</columns>
        <columns>CN_Sample_Delivery_Method__c</columns>
        <columns>CN_Sample_Request_Cost__c</columns>
        <columns>CN_Sample_Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CN_All_Office_Repack_Sample_Requests</fullName>
        <columns>NAME</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Sample_Needed_Date__c</columns>
        <columns>CN_Order_Reason__c</columns>
        <columns>CN_Sample_Delivery_Method__c</columns>
        <columns>CN_Sample_Request_Cost__c</columns>
        <columns>CN_Sample_Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sample_Request__c.CN_Office_Repack</value>
        </filters>
        <label>All Office Repack Sample Requests</label>
        <sharedTo>
            <roleAndSubordinates>CN_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_All_Whole_Pack_Sample_Requests</fullName>
        <columns>NAME</columns>
        <columns>CN_Account_Name__c</columns>
        <columns>CN_Sample_Needed_Date__c</columns>
        <columns>CN_Order_Reason__c</columns>
        <columns>CN_Sample_Delivery_Method__c</columns>
        <columns>CN_Sample_Request_Cost__c</columns>
        <columns>CN_Sample_Request_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CN_Sample_Request__c.CN_Whole_Pack</value>
        </filters>
        <label>All Whole Pack Sample Requests</label>
        <sharedTo>
            <roleAndSubordinates>CN_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000000}</displayFormat>
        <label>Sample Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <recordTypes>
        <fullName>CN_Office_Repack</fullName>
        <active>true</active>
        <label>Office Repack</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_Whole_Pack</fullName>
        <active>true</active>
        <label>Whole Pack</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Check_Deliver_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISPICKVAL(CN_Sample_Delivery_Method__c, &quot;Express Delivery&quot;),
 ISBLANK(CN_Delivery_Address__c  ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Delivery_Address__c</errorDisplayField>
        <errorMessage>Delivery Address is mandatory if delivery method is express delivery.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Field_Prospect_Opportunity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISBLANK(CN_Account_Name__r.CN_Customer_Code__c),
  ISPICKVAL(CN_Sample_Delivery_Method__c, &apos;Include in the delivery tomorrow&apos;)
)</errorConditionFormula>
        <errorDisplayField>CN_Sample_Delivery_Method__c</errorDisplayField>
        <errorMessage>It&apos;s not allow to select &quot;include in the delivery tomorrow&quot; delivery method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Opp_Stage_On_Create</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
NOT(ISPICKVAL(CN_Opportunity_Name__r.StageName,&quot;Proposal/Demo/Sample&quot;)),
NOT(ISBLANK(CN_Opportunity_Name__c)),
ISNEW()
)</errorConditionFormula>
        <errorDisplayField>CN_Sample_Request_Status__c</errorDisplayField>
        <errorMessage>Only the opportunity into stage Proposal/Demo/Sample could create Sample Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Prospect_Opportunity</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
IF(CN_Opportunity_Name__r.Account.RecordType.DeveloperName=&quot;CN_Edit_Prospect&quot;, TRUE, FALSE)
)</errorConditionFormula>
        <errorMessage>sales CANNOT create wholepack sample request for prospect&apos;s opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Sample_Need_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISCHANGED(CN_Sample_Request_Status__c),
  ISPICKVAL(CN_Sample_Request_Status__c, &quot;Ready for Approval&quot;),
 CN_Sample_Needed_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Sample_Needed_Date__c</errorDisplayField>
        <errorMessage>Sample Needed Date should not less than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Canceled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISCHANGED(CN_Sample_Request_Status__c ) ,
 NOT(( ISPICKVAL(PRIORVALUE(CN_Sample_Request_Status__c ), &quot;Approved&quot;) ) ),
 ISPICKVAL(CN_Sample_Request_Status__c , &quot;Canceled&quot;) 
)</errorConditionFormula>
        <errorDisplayField>CN_Sample_Request_Status__c</errorDisplayField>
        <errorMessage>It&apos;s not allowed cancel sample request which not approved yet.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_After_Approved_Canceled</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
	NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
	OR(
          ISPICKVAL(CN_Sample_Request_Status__c, &quot;Approved&quot;),
          ISPICKVAL(CN_Sample_Request_Status__c, &quot;Canceled&quot;),
          ISPICKVAL(PRIORVALUE(CN_Sample_Request_Status__c)  , &quot;Approved&quot;),
          ISPICKVAL(PRIORVALUE(CN_Sample_Request_Status__c)  , &quot;Canceled&quot;)
        ),
	NOT(AND(
	  ISPICKVAL(PRIORVALUE(CN_Sample_Request_Status__c) , &quot;Approved&quot;),
	  ISPICKVAL(CN_Sample_Request_Status__c, &quot;Canceled&quot;)
	)),
        NOT(ISCHANGED(CN_SP_Records_Count_All__c)),
        NOT(ISCHANGED(CN_SP_Records_Count_Delivery_Status_All__c)),
        NOT(ISCHANGED(CN_SP_Records_Count_Delivery_Status_Done__c)),
        NOT(ISCHANGED(CN_Sample_Request_Cost__c))
)</errorConditionFormula>
        <errorMessage>It&apos;s not allowed to edit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SR_Check_Ready_SKU</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
BEGINS(RecordType.DeveloperName, &quot;CN&quot;),
ISPICKVAL(CN_Sample_Request_Status__c, &quot;Ready for Approval&quot;),
CN_SP_Records_Count_All__c &lt;= 0
)</errorConditionFormula>
        <errorMessage>Please select at least one SKU before submit for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SR_Prevent_Cancel</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
ISPICKVAL(CN_Sample_Request_Status__c,&quot;Canceled&quot;),
Not(
IF(DATEVALUE(CN_Approved_Date__c) = Datevalue(now()),
IF(TIMEVALUE(CN_Approved_Date__c +(0.04167 * 8) ) &lt; TIMEVALUE(&quot;19:30:00.000&quot;), TIMEVALUE(NOW()+(0.04167 * 8))&lt;TIMEVALUE(&quot;19:30:00.000&quot;),false),
IF(DATEVALUE(CN_Approved_Date__c) = Datevalue(now()-1),
	IF(TIMEVALUE(CN_Approved_Date__c +(0.04167 * 8) ) &gt; TIMEVALUE(&quot;19:30:00.000&quot;), TIMEVALUE(NOW()+0.04167 * 8)&lt;TIMEVALUE(&quot;19:30:00.000&quot;),false)
, false)
)
)
)</errorConditionFormula>
        <errorMessage>You&apos;re not allowed to cancel it now.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SR_Prevent_Change_Products_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  OR(RecordType.DeveloperName = &quot;CN_Office_Repack&quot;,RecordType.DeveloperName = &quot;CN_Whole_Pack&quot;),
  OR(
    AND(
      CN_SP_Records_Count_Delivery_Status_All__c == CN_SP_Records_Count_All__c,
      CN_SP_Records_Count_Delivery_Status_All__c &gt; 1,
      NOT(ISCHANGED(CN_SP_Records_Count_Delivery_Status_All__c)),
      NOT(ISCHANGED(CN_SP_Records_Count_All__c))
    ),
    AND(
      PRIORVALUE(CN_SP_Records_Count_Delivery_Status_All__c ) ==  PRIORVALUE(CN_SP_Records_Count_All__c),
      PRIORVALUE(CN_SP_Records_Count_Delivery_Status_All__c ) &gt; 0,
      OR(
        ISCHANGED(CN_SP_Records_Count_Delivery_Status_All__c),
        ISCHANGED(CN_SP_Records_Count_All__c)
      )
    )
  ) 
)</errorConditionFormula>
        <errorMessage>You are not allowed to create or edit the status of sample products when all sample products&apos;s status are not null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_SR_Prevent_Edit_For_Ready</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
BEGINS(RecordType.DeveloperName, &quot;CN&quot;),
AND(
ISPICKVAL(CN_Sample_Request_Status__c, &quot;Ready for Approval&quot;),
NOT(ISCHANGED(CN_Sample_Request_Status__c))
)
)</errorConditionFormula>
        <errorMessage>You are not allowed to edit when sample request is marked as ready for approval.</errorMessage>
    </validationRules>
</CustomObject>